--- a/_config.yml
+++ b/_config.yml
@@ -41,3 +41,6 @@ permalink: pretty
 
 # Exclude
 # exclude: 
+
+redcarpet:
+  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript", "with_toc_data", "tables"]
